# flanellograf

./: .gitignore  Makefile  README.md  pyproject.toml
examples/: board_example.py
flanellograf/: __init__.py  __main__.py  main.py  utils.py
