[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "flanellograf"
keywords = ["presentation" , "repl", "code", "documentation"]
authors = [{name = "Sondre S. Ødegård"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Topic :: Documentation",
    "Topic :: Education",
]
dynamic = ["version", "description"]
dependencies = ["rich"]

[project.urls]
Source = "https://github.com/sondreod/flanellograf"
Documentation = "https://github.com/sondreod/flanellograf"

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "flit",
]